# sphinxawesome-codelinter

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  constraints.txt  mise.toml  mypy.ini  noxfile.py  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  constraints.txt  coverage.yml  lint.yml  release.yml  tests.yml  update-dependencies.yml
sphinxawesome/: __init__.py
sphinxawesome/codelinter/: __init__.py
sphinxawesome/sphinxawesome_codelinter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/sphinxawesome/: __init__.py
src/sphinxawesome/codelinter/: __init__.py  __init__.pyi
tests/: conftest.py  test_sphinx_awesome_codelinter.py  test_sphinxawesome_codelinter.py
tests/example/test-root/: index.rst  test.json
tests/test-root/: conf.py  index.rst
