[tool.poetry]
name = "sphinxawesome-codelinter"
version = "2.0.0"
description = "A Sphinx extension to expose code blocks to external tools for linting"
license = "MIT"
readme = "README.md"
authors = ["Kai Welke <kai687@pm.me>"]
repository = "https://github.com/kai687/sphinxawesome-codelinter"
classifiers = [
  'Programming Language :: Python',
  'Framework :: Sphinx',
  'Framework :: Sphinx :: Extension',
  'Topic :: Documentation',
  'Topic :: Documentation :: Sphinx',
  'Topic :: Software Development :: Documentation'
]
packages = [
  { include = "sphinxawesome", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
sphinx = [
  { version = "<7.2", python = ">=3.8,<3.9"},
  { version = "^7.2,<7.4", python = ">=3.9,<=3.13"},
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
yamllint = "^1.35"
pytest-cov = "^5.0"
coverage = {extras = ["toml"], version = "^7.6"}
mypy = "^1.11"
typeguard = ">=2.13.3,<5.0.0"
safety = "^3.2.5"
types-docutils = ">=0.19.1,<0.22.0"
defusedxml = "0.7.1"

[tool.poetry.group.lint.dependencies]
pre-commit = [
  { version = "^3.5", python = ">=3.8,<3.9"},
  { version = "^3.6", python = ">=3.9,<=3.12"},
]
ruff = ">=0.5.1,<0.5.8"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["sphinxawesome.codelinter"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
files = ["noxfile.py", "src/**/*.py", "tests/**/*.py"]
show_error_codes = true
show_error_context = true
pretty = true
strict = true
show_column_numbers = true
warn_unreachable = true
warn_unused_ignores = false

[tool.ruff.lint]
select = ["E", "F", "B", "Q", "W", "I", "C90", "D", "UP", "YTT", "S", "ANN", "SIM", "N"]
ignore = ["ANN401", "S603", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
