[project]
name = "sphinxawesome-codelinter"
version = "3.0.0b1"
description = "A Sphinx extension to expose code blocks to external tools for linting"
readme = "README.md"
authors = [
  { name = "Kai Welke", email = "kai687@pm.me"}
]
classifiers = [
  "Programming Language :: Python",
  "Framework :: Sphinx",
  "Framework :: Sphinx :: Extension",
  "Topic :: Documentation",
  "Topic :: Documentation :: Sphinx",
  "Topic :: Software Development :: Documentation",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires_python = ">=3.9"
packages = [
  { include = "sphinxawesome", from = "src" }
]
dependencies = [
  "sphinx>7,<9",
]

[project.urls]
repository = "https://github.com/kai687/sphinxawesome-codelinter"
issues = "https://github.com/kai687/sphinxawesome-codelinter/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "yamllint",
  "nox",
  "types-docutils",
  "ruff",
  "pyright",
]

[tool.ruff.lint]
select = ["E", "F", "B", "Q", "W", "I", "C90", "D", "UP", "YTT", "S", "ANN", "SIM", "N"]
ignore = ["ANN401", "S603", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
include = ["src", "noxfile.py"]
reportUnnecessaryTypeIgnoreComment = "warning"

[tool.hatch.build.targets.wheel]
packages = ["src/sphinxawesome"]
